add terms and conditions

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -255,7 +255,8 @@
     "Show craftsman Products": "عرض منتجات البائع",
     "Show product Bids": "إظهار عروض المنتج",
     "Starting Bid Price": "سعر أول عرض ممكن",
-    "StartingBid:": "أول عرض:",
+    "Yes, Delete Order":"نعم، احذف",
+    "StartingBid:": "أول عرض ممكن:",
     "The Handicrafts Auction products contains twelve static categories": "مزاد المشغولات اليديوية يشمل 12 تصنيف للمنتجات المختلفة.",
     "The Product Has Blocked": " المنتج غير فعال ",
     "This product is in-active now": "المنتج غير فعال الآن",
