--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -15,6 +15,7 @@
     "Are you sure you want to delete the order of product: ": "هل أنت متأكد أنك تريبد حذف طلبية المنتج: ",
     "Are you sure you want to delete your product:": "هل أنت متأكد أنك تريد حذف منتجك: ",
     "Auction Timer": "مؤقت المزاد",
+    "store": "متجر",
     "Auctioned (and not ordered yet) Products": "(لم تُطلب بعد) المنتجات التي تمت المزايدة عليها:",
     "Bead": "الخرز",
     "beads": "الخرز",
@@ -126,11 +127,11 @@
     "Glass": "الزجاج",
     "glass": "الزجاج",
     "Goals": "الأهداف",
-    "Handicrafts Auction": "مزاد المشغولات اليدوية",
-    "Handicrafts Auction Categories": "تصنيفات المنتجات في مزاد المشغولات اليدوية",
-    "Handicrafts Auction Features": "مزايا مزاد المشغولات اليدوية",
-    "Handicrafts Auction Team": "فريق مزاد المشغولات اليدوية",
-    "HandicraftsAuction": "مزاد المشغولات اليدوية",
+    "Handicrafts Auction": "مطبخ بيتي",
+    "Handicrafts Auction Categories": "تصنيفات المنتجات في مطبخ بيتي",
+    "Handicrafts Auction Features": "مزايا مزاد مطبخ بيتي",
+    "Handicrafts Auction Team": "فريق مزاد مطبخ بيتي",
+    "HandicraftsAuction": " مطبخ بيتي",
     "History": "التاريخ",
     "Home": "الرئيسية",
     "I pledge to deliver the order price upon receipt": "أتعهد بتسليم ثمن المنتج فور استلامي إياه.",
@@ -332,6 +333,13 @@
     "ordered product": "منتج قيد التسليم", 
     "Admin": "مدير",
     "Role": "الدور",
+    "Salade": "سلطات",
+    "Soup": "شوربات",
+    "Sweets": "حلويات",
+    "Sundae": "مثلجات",
+    "Pastries": "معجنات",
+    "FastFood": "وجبات سريعة",
+    "TraditionalFood": "أكلات شعبية",
     "This category contains products that belong to the craft of painting": "يشمل هذا التصنيف المشغولات اليديوية المعتمدة على الدهانات والرسم أو اللوحات الفنية",
     "This category contains products that belong to craft of decorating paper": "يشمل هذا التصنيف المشغولات اليدوية المصنوعة من الورق",
     "This category contains products that belong to the craft of embroidery": "يشمل هذا التصنيف المشغولات اليدوية المصنوعة من التطريز",
